Fix overflow on work cards

--- a/css/pages/work/work.scss
+++ b/css/pages/work/work.scss
@@ -108,6 +108,7 @@ img {
         animation: fadeIn 0.5s ease;
         box-shadow: 0 5px 8px black, 0 6px 7px black;
         transition: all 0.5s cubic-bezier(.25,.8,.25,1);
+        overflow: hidden;
 
         &.active {
           display: block;
@@ -136,19 +137,11 @@ img {
           font-weight: bold;
         }
 
-        ul {
-          margin: 1rem 0 0 1rem;
-          padding: 0;
-
-          li {
-            margin-bottom: 0.75rem;
-            line-height: 1.4;
-            color: v.$background-color;
-
-            strong {
-              color: v.$secondary-color;
-            }
-          }
+        .description {
+          overflow-y: auto;
+          flex: 1;
+          color: v.$background-color;
+          max-height: calc(100vh - 500px);
         }
 
         .icons {
